--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10357,8 +10357,8 @@ section.bulletin-board--container {
   }
 }
 
-/* Apply $colorLink to read more links in blog template section */
-.shopify-section-blog-template a[href*="/blogs/"]:not(.btn) {
+/* Apply $colorLink to read more links in blog template section (excluding h2 links) */
+.shopify-section-blog-template a[href*="/blogs/"]:not(.btn):not(h2 a) {
   color: $colorLink;
   
   &:hover,
