Link color Editor

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10358,7 +10358,7 @@ section.bulletin-board--container {
 }
 
 /* Apply $colorLink to read more links in blog template section (excluding h2 links) */
-.shopify-section-blog-template a[href*="/blogs/"]:not(.btn):not(h2 a) {
+.shopify-section-blog-template h5 a[href*="/blogs/"]:not(.btn) {
   color: $colorLink;
   
   &:hover,
