Exclude Link Color

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4631,6 +4631,14 @@ button.shopify-payment-button__button--unbranded {
     }
   }
 
+  .exclude-color-link {
+    color: $colorPrimary;
+
+    &:hover {
+      color: $colorPrimaryHover;
+    }
+  }
+
   input[type="image"] {
     padding: 15px 0px;
   }
