Color Link Backup

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6114,6 +6114,10 @@ $color-blankstate-background: rgba($colorTextBody, 0.1);
 
 .exclude-color-link {
   color: $colorPrimary;
+
+  &:hover {
+    background-color: darken($colorPrimary, 5%);
+  }
 }
 
 .blog-read-more {
