Color Link Backup

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6116,7 +6116,7 @@ $color-blankstate-background: rgba($colorTextBody, 0.1);
   color: $colorPrimary;
 
   &:hover {
-    background-color: darken($colorPrimary, 5%);
+    color: darken($colorPrimary, 5%);
   }
 }
 
