--- a/snippets/featured-blog.liquid
+++ b/snippets/featured-blog.liquid
@@ -1,6 +1,6 @@
 <div class="blog-content-container">
   <h2 class="h3 blog-title">
-    <a class="blog-headings" href="{{ article.url }}">{{ article.title }}</a>
+    <a class="blog-headings exclude-color-link" href="{{ article.url }}">{{ article.title }}</a>
   </h2>
   {% if section.settings.blog_show_date or section.settings.blog_show_author %}
     <div class="featured-blog__meta">
