RA Link Styling

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10614,6 +10614,13 @@ div#rental-cart svg {
     margin-left: 5px;
 }
 
+.request-availability-form-link {
+    margin-bottom: 20px;
+    font-size: 1em;
+    font-weight: 600;
+    color: {{ settings.color_link }};
+}
+
 .enquiry-disclaimer-form-label-required:before {
     content: "*";
     color: #d11a18;
