--- a/snippets/enquiry-request-form.liquid
+++ b/snippets/enquiry-request-form.liquid
@@ -174,7 +174,7 @@
 
       {% if settings.request_availability_form_link_label and settings.request_availability_form_link_url %}
       <div style="margin-top: 15px;">
-        <a href="{{ settings.request_availability_form_link_url }}" target="_blank" class="request-availability-form-link" style="font-size: 1em; font-weight: 600; color: {{ settings.color_link }}; margin-bottom: 20px;">
+        <a href="{{ settings.request_availability_form_link_url }}" target="_blank" class="request-availability-form-link">
           {{ settings.request_availability_form_link_label }}
         </a>
       </div>
