--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10618,7 +10618,7 @@ div#rental-cart svg {
     margin-bottom: 20px;
     font-size: 1em;
     font-weight: 600;
-    color: {{ settings.color_link }};
+    color: $colorLink;
 }
 
 .enquiry-disclaimer-form-label-required:before {
