--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10614,8 +10614,11 @@ div#rental-cart svg {
     margin-left: 5px;
 }
 
+.request-availability-form-link-container {
+  margin-bottom: 20px;
+}
+
 .request-availability-form-link {
-    margin-bottom: 20px;
     font-size: 1em;
     font-weight: 600;
     color: $colorLink;
