--- a/snippets/enquiry-request-form.liquid
+++ b/snippets/enquiry-request-form.liquid
@@ -173,7 +173,7 @@
       </div>
 
       {% if settings.request_availability_form_link_label and settings.request_availability_form_link_url %}
-      <div style="margin-top: 15px;">
+      <div class="request-availability-form-link-container">
         <a href="{{ settings.request_availability_form_link_url }}" target="_blank" class="request-availability-form-link">
           {{ settings.request_availability_form_link_label }}
         </a>
