--- a/snippets/enquiry-request-form.liquid
+++ b/snippets/enquiry-request-form.liquid
@@ -183,9 +183,11 @@
       <!-- Checkbox Section -->
       <div class="enquiry-disclaimer-container">
         <div class="enquiry-disclaimer-wrapper">
-          <div class="enquiry-disclaimer-asterisk">*</div>
-          <label class="request-availability-form-label enquiry-disclaimer-form-label">
-            <input type="checkbox" id="terms-checkbox" required style="margin-right: 5px;">
+          <div class="enquiry-disclaimer-asterisk-checkbox">
+            <div class="enquiry-disclaimer-asterisk">*</div>
+            <input type="checkbox" id="terms-checkbox" required>
+          </div>
+          <label class="request-availability-form-label enquiry-disclaimer-form-label" for="terms-checkbox">
             <span>
               By checking this box, I acknowledge that I'm submitting a request to check availability of rental items only. This does not reserve or guarantee any items. A reservation will be confirmed separately after availability is verified by our team.
             </span>
