Adjust RA Checkbox on Mobile

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10724,6 +10724,16 @@ div#rental-cart svg {
   width: auto !important;
 }
 
+/* Checkbox wrapper - inline-block on all screen sizes */
+.enquiry-checkbox-wrapper {
+  display: inline-block;
+  width: auto !important;
+}
+
+.enquiry-checkbox-wrapper input[type="checkbox"] {
+  width: auto !important;
+}
+
 
 js-enquiry-durations
 
