--- a/snippets/enquiry-request-form.liquid
+++ b/snippets/enquiry-request-form.liquid
@@ -183,7 +183,7 @@
       <!-- Checkbox Section -->
       <div class="enquiry-disclaimer-container">
         <div class="enquiry-disclaimer-wrapper">
-          <div class="enquiry-disclaimer-asterisk-checkbox">
+          <div class="enquiry-disclaimer-asterisk-checkbox enquiry-checkbox-wrapper">
             <div class="enquiry-disclaimer-asterisk">*</div>
             <input type="checkbox" id="terms-checkbox" required>
           </div>
