Style Checkbox on Mobile

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10678,6 +10678,16 @@ div#rental-cart svg {
   div#js-enquiry-form-list thead, div#js-enquiry-form-list tfoot {
     display: none;
   }
+
+  /* Checkbox wrapper flex layout on small screens */
+  .enquiry-checkbox-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  .enquiry-checkbox-wrapper input[type="checkbox"] {
+    margin-left: 10px;
+  }
   
 }
 
