Style Checkbox on mobile

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10681,7 +10681,7 @@ div#rental-cart svg {
 
   /* Checkbox wrapper flex layout on small screens */
   .enquiry-checkbox-wrapper {
-    display: flex;
+    display: flex !important;
     align-items: center;
   }
 
