--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -9831,7 +9831,7 @@ div#rental-cart svg {
 
   /* Checkbox wrapper flex layout on small screens */
   .enquiry-checkbox-wrapper {
-    display: flex;
+    display: flex !important;
     align-items: center;
   }
 
