Style Checkbox on mobile

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -9837,6 +9837,7 @@ div#rental-cart svg {
 
   .enquiry-checkbox-wrapper input[type="checkbox"] {
     margin-left: 10px;
+    width: auto !important;
   }
   
 }
