--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10687,6 +10687,7 @@ div#rental-cart svg {
 
   .enquiry-checkbox-wrapper input[type="checkbox"] {
     margin-left: 10px;
+    width: auto !important;
   }
   
 }
