Style RA Checkbox on Mobile

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -9839,6 +9839,11 @@ div#rental-cart svg {
     margin-left: 10px;
     width: auto !important;
   }
+
+  #terms-checkbox {
+    width: auto !important;
+    margin-left: 0px;
+  }
   
 }
 
