Style RA Checkbox on Mobile

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10740,7 +10740,8 @@ div#rental-cart svg {
 
 .enquiry-disclaimer-form-label {
   flex: 1;
-  font-size: 14px;
+  font-size: 1em;
+  font-weight: 600;
   line-height: 1.4;
   color: #495057;
   margin: 0;
