Style RA Checkbox on Mobile

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10743,7 +10743,7 @@ div#rental-cart svg {
   font-size: 1em;
   font-weight: 600;
   line-height: 1.4;
-  color: #495057;
+  color: {{ settings.color_heading_text }};
   margin: 0;
 }
 
