Style RA Checkbox on Mobile

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10699,6 +10699,10 @@ div#rental-cart svg {
     margin-left: 0px;
   }
   
+  div#enquiry-form-column #terms-checkbox {
+    width: auto !important;
+  }
+  
 }
 
 .enquiry-flex {
