Style RA Checkbox on Mobile

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -10774,9 +10774,9 @@ div#rental-cart svg {
   width: auto !important;
 }
 
-/* Checkbox wrapper - inline-block on all screen sizes */
+/* Checkbox wrapper - flex on large screens */
 .enquiry-checkbox-wrapper {
-  display: inline-block;
+  display: flex;
   width: auto !important;
 }
 
