Maintain Blog Image Border Radius on Hover

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6916,6 +6916,11 @@ div#icf-placeholder {
 .featured-blog img {
     width: 100%;
     border-radius: 4px 4px 0px 0px;
+    transition: transform 0.3s ease;
+}
+
+.featured-blog:hover img {
+    border-radius: 4px 4px 0px 0px;
 }
 
 /*** Mortar Departments & Services ***/
