Contact Form Styling

--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -41,11 +41,11 @@
         {%- endif -%}
         <div class="contact__fields">
           <div class="field">
-            <label class="field__label" for="ContactForm-name">Name</label>
+            <label class="contact-form-label contact-form-label-required" for="ContactForm-name">Name</label>
             <input class="field__input" autocomplete="name" type="text" id="ContactForm-name" name="contact[name]" value="Name" placeholder="Name">
           </div>
           <div class="field field--with-error">
-            <label class="field__label" for="ContactForm-email">Email<span aria-hidden="true">*</span></label>
+            <label class="contact-form-label contact-form-label-required" for="ContactForm-email">Email</label>
             <input
                    autocomplete="email"
                    type="email"
@@ -71,11 +71,11 @@
           </div>
         </div>
         <div class="field">
-          <label class="field__label" for="ContactForm-phone">Phone</label>
+          <label class="contact-form-label contact-form-label-required" for="ContactForm-phone">Phone</label>
           <input type="tel" id="ContactForm-phone" class="field__input" autocomplete="tel" name="contact[Phone]" pattern="[0-9\-]*" value="Phone"> 
         </div>
         <div class="field">
-          <label class="form__label field__label" for="ContactForm-body">How can we help you?</label>
+          <label class="contact-form-label contact-form-label-required" for="ContactForm-body">How can we help you?</label>
           <textarea
                     rows="10"
                     id="ContactForm-body"
@@ -116,11 +116,11 @@
         {%- endif -%}
         <div class="contact__fields">
           <div class="field">
-            <label class="field__label" for="ContactForm-name">Name</label>
+            <label class="contact-form-label contact-form-label-required" for="ContactForm-name">Name</label>
             <input class="field__input" autocomplete="name" type="text" id="ContactForm-name" name="contact[name]" value="Name" placeholder="Name">
           </div>
           <div class="field field--with-error">
-            <label class="field__label" for="ContactForm-email">Email <span aria-hidden="true">*</span></label>
+            <label class="contact-form-label contact-form-label-required" for="ContactForm-email">Email</label>
             <input
                    autocomplete="email"
                    type="email"
@@ -146,11 +146,11 @@
           </div>
         </div>
         <div class="field">
-          <label class="field__label" for="ContactForm-phone">Phone</label>
+          <label class="contact-form-label contact-form-label-required" for="ContactForm-phone">Phone</label>
           <input type="tel" id="ContactForm-phone" class="field__input" autocomplete="tel" name="contact[Phone]" pattern="[0-9\-]*" value="Phone"> 
         </div>
         <div class="field">
-          <label class="form__label field__label" for="ContactForm-body">How can we help you?</label>
+          <label class="contact-form-label contact-form-label-required" for="ContactForm-body">How can we help you?</label>
           <textarea
                     rows="10"
                     id="ContactForm-body"
